--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^1.0.0",
     "paper-item": "PolymerElements/paper-item#^1.0.0",
-    "paper-material": "PolymerElements/paper-material#^1.0.0"
+    "paper-material": "PolymerElements/paper-material#^1.0.0",
+    "paper-slider": "PolymerElements/paper-slider#^1.0.0"
   }
 }
